--- a/popup.html
+++ b/popup.html
@@ -2,12 +2,15 @@
 <html>
 	<head>
 		<title>Heyaw</title>
-		<script src="popup.js"></script>
+		<script src="jquery-1.12.3.min.js"></script>
 		<script src="buzz.min.js"></script>
+		<script src="popup.js"></script>
+		<script src="link.js"></script>
 	</head>
 	<body>
 		<h1>HEYAW</h1>
 		<h5 id="indicator">Off</h5>
 		<button id="toggleKeyboard">Toggle le Heyaw Keyboard</button>
+		<a href="http://howmanyheyaws.tk">How Many Heyaws?</a>
 	</body>
 </html>
